# hoppet/pyinterface/pyproject.toml
[build-system]
requires = ["scikit-build-core", "swig"]
build-backend = "scikit_build_core.build"

[project]
name = "HOPPET"
dynamic = ["version"]
description = "HOPPET: A Higher Order Perturbative Parton Evolution Toolkit"
authors = [
    {name = "Frederic Dreyer"},
    {name = "Alexander Karlberg"},
    {name = "Alexander Karlberg", email = "alexander.karlberg@cern.ch"},
    {name = "Paolo Nason"},
    {name = "Juan Rojo"},
    {name = "Gavin Salam"},
    {name = "Gavin Salam", email = "gavin.salam@physics.ox.ac.uk"},
    {name = "Giulia Zanderighi"}
]
keywords = ["physics", "pdf", "evolution"]
classifiers = [
    # Choose ONE of these: 
    #"Development Status :: 1 - Planning",
    #"Development Status :: 2 - Pre-Alpha", 
    #"Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
    #"Development Status :: 6 - Mature",
    #"Development Status :: 7 - Inactive"
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
license = {text = "GPL-3.0-or-later"}
readme = "pyinterface/README.md"
requires-python = ">=3.8"
# Add any Python dependencies here
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/hoppet-code"
Repository = "https://github.com/hoppet-code/hoppet"
Changelog = "https://github.com/hoppet-code/hoppet/blob/master/NEWS.md"

[tool.scikit-build]
cmake.source-dir = "."
# Turn on hoppet interface and off all the examples
cmake.define.HOPPET_BUILD_PYINTERFACE = "OFF"
cmake.define.HOPPET_BUILD_PYWHEELS = "ON"
cmake.define.HOPPET_BUILD_BENCHMARK = "OFF"
cmake.define.HOPPET_BUILD_EXAMPLES = "OFF"
cmake.define.HOPPET_BUILD_TESTDIR = "OFF"
cmake.define.HOPPET_ENABLE_TESTING = "OFF"
cmake.define.HOPPET_USE_EXACT_COEF = "ON"
wheel.packages = ["hoppet"]
# Use Unix Makefiles instead of Ninja
cmake.args = ["-G", "Unix Makefiles"]

# Small regexp to get version number from cmake file
#
# Note that we have to increment the python version by hand in the
# "result" below. So if hoppet version is 2.0.0, and we set
# result = "{value}.2" the python version would be 2.0.0.2.
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
# Capture the value after 'VERSION' in the project() call (PEP 440-ish token)
regex = '''(?im)^\s*project\([^)]*VERSION\s+(?P<value>[0-9]+(?:\.[0-9]+){1,2}[A-Za-z0-9.+-]*)'''
# pipversion gets an extra index
result = "{value}.dev0"